<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/background"
    tools:context="com.example.android.quiz.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:scrollbars="vertical"
        >

        <TextView
            style="@style/text_view"
            android:text="@string/Q1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/rafel_nadal"
                style="@style/check_box"
                android:text="Rafel Nadal" />

            <CheckBox
                android:id="@+id/Marc_Lopez"
                style="@style/check_box"
                android:text="Marc Lopez" />

            <CheckBox
                android:id="@+id/andy_murray"
                style="@style/check_box"
                android:text="Andy Murray" />

            <CheckBox
                android:id="@+id/Roger_Fedrer"
                style="@style/check_box"
                android:text="Roger Fedrer" />
        </LinearLayout>

        <TextView
            style="@style/text_view"
            android:text="@string/Q2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/nigeria"
                    style="@style/radio_button"
                    android:text="Nigeria" />

                <RadioButton
                    android:id="@+id/brazil"
                    style="@style/radio_button"
                    android:text="Brazil" />

                <RadioButton
                    android:id="@+id/germany"
                    style="@style/radio_button"
                    android:text="Germany" />

                <RadioButton
                    android:id="@+id/France"
                    style="@style/radio_button"
                    android:text="France" />
            </RadioGroup>
        </LinearLayout>

        <TextView
            style="@style/text_view"
            android:text="@string/Q3" />

        <EditText
            android:id="@+id/answer"
            style="@style/edit_text"
            android:hint="@string/hint1" />

        <TextView
            style="@style/text_view"
            android:text="@string/Q10" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rome"
                style="@style/radio_button"
                android:text="Rome" />

            <RadioButton
                android:id="@+id/sydney"
                style="@style/radio_button"
                android:text="Sydney" />

            <RadioButton
                android:id="@+id/tokyo"
                style="@style/radio_button"
                android:text="Tokyo" />

            <RadioButton
                android:id="@+id/athens"
                style="@style/radio_button"
                android:text="Athens" />
        </RadioGroup>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:text="Submit" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>
